Clean up benchmark